fix(ffe-form): endrer størrelse og alignment i tooltip

--- a/packages/ffe-form/less/tooltip.less
+++ b/packages/ffe-form/less/tooltip.less
@@ -7,7 +7,7 @@
         border: none;
         color: var(--ffe-color-foreground-emphasis);
         cursor: help;
-        height: 1.5625rem;
+        height: 1.25rem;
         aspect-ratio: 1;
         margin: 0;
         padding: 0;
